  Changes:
    - help on technologies improved
    - Alignment in technology panels
    - Correct data for inifinte technologies 
    - Prerequisite reseaches
    - Array:Clone whithout predicate was missing
    - Array:Stringify introduced
    - Common.ClickTarget re-introduced (it is only almost like CommonKey)
    - Eventmanager: Research-state things
  Refactor:
    - better naming
---------------------------------------------------------------------------------------------------
Version: 0.2.27
Date: 2020-12-07
  Changes:
    - zn-CH localisation by Ting_amm
    - help on recipes (First version, needs improvement, help welcome)
    - help on technologies (First version, needs improvement, help welcome)
---------------------------------------------------------------------------------------------------
Version: 0.2.26
Date: 2020-12-07
  Bugfixes:
    - fixing Crash when opening an assembly machine with a recipe with a fluid
    - fixing Crash during save (4th trial): not storing references to game.item_prototypes anywhere - also not as local variable
---------------------------------------------------------------------------------------------------
Version: 0.2.25
Date: 2020-12-06
  Bugfixes:
    - fixing Crash when research has finished
---------------------------------------------------------------------------------------------------
Version: 0.2.24
Date: 2020-12-06
  Bugfixes:
    - fixing Crash during save (3rd trial)
  Changes:
    - Help-text on main button
  Refactor:
    - unused things removed
    - better naming
---------------------------------------------------------------------------------------------------
Version: 0.2.23
Date: 2020-12-05
  Bugfixes:
    - fixing Crash during save (2nd trial)
    - fixing can't click quickly twice
  Changes:
    - Restructure of global data not using forbidden objects
---------------------------------------------------------------------------------------------------
Version: 0.2.22
Date: 2020-12-05
  Bugfixes: