@@ -12,6 +12,7 @@ Date: 2020-12-08
     - Eventmanager: Research-state things
   Refactor:
     - better naming
+    - reintroducing MiningRecipe and BoilingRecipe
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.27
 Date: 2020-12-07
